--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,24 @@
-.App {
-  text-align: center;
+body{
+  font-family: schoolbell,cursive;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #eee;
+  background-color: #191D27;
+  background: url("http://bgfons.com/uploads/cloth/cloth_texture1068.jpg");
+  background-size: cover;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+button {
+  cursor: pointer;
+  border: 2px solid transparent;
+  background-color: transparent;
+  box-shadow: inset 0 0 5px #00e5ff, 0 0 10px #00e5ff;
+  border-radius: 4px;
+  color: #fafafa;
+  padding: 0.5rem;
+  transition: background-color 0.2s ease-in;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus,
+button:focus {
+  outline: none;
 }
