--- a/src/Common/Components/Footer/Footer.css
+++ b/src/Common/Components/Footer/Footer.css
@@ -5,10 +5,10 @@
   font-size: 0.8rem;
   width: 100%;
   height:160px;
-  
+  position: relative;
   bottom:0;
   left: 0;
-
+  display: block;
 }
 #footer img{
   width: 35px;
