--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body{
-  font-family: schoolbell,cursive;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -23,8 +22,36 @@ input:focus,
 button:focus {
   outline: none;
 }
-button:focus,
+/* button:focus,
 button:hover,
 button:active{
     background: #0084ff;
+} */
+
+header{
+position: fixed;
+}
+
+section{
+  margin: 0 0 60px 0
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #4ba0f0fb;
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #4ba0f0fb;
 }
