--- a/src/Common/Components/Footer/Footer.css
+++ b/src/Common/Components/Footer/Footer.css
@@ -9,6 +9,7 @@
   bottom:0;
   left: 0;
   display: block;
+  font-size: 16px;
 }
 #footer img{
   width: 35px;
@@ -17,4 +18,41 @@
 
 .footerLogo{
   margin: 8px
+}
+
+@media screen and (max-width:992px){
+  #footer{
+    font-size: 14px;
+  }
+  #footer img{
+    width: 30px;
+    height: 30px;
+  }
+}
+@media screen and (max-width:768px){
+  #footer{
+    font-size: 12px;
+  }
+  #footer img{
+    width: 18px;
+    height: 18px;
+  }
+}
+@media screen and (max-width:512px){
+  #footer{
+    font-size: 10px;
+  }
+  #footer img{
+    width: 15px;
+    height: 15px;
+  }
+}
+@media screen and (max-width:375px){
+  #footer{
+    font-size: 8px;
+  }
+  #footer img{
+    width: 10px;
+    height: 10px;
+  }
 }
