--- a/src/Common/Components/Modal/Modal.css
+++ b/src/Common/Components/Modal/Modal.css
@@ -1,7 +1,12 @@
-/* .myModal{
-    z-index: 2;
-} */
-
+.modal-backdrop {
+    position: relative;
+    /* top: 0;
+    left: 0;
+    z-index: 1040;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000; */
+}
 .modal-header, .modal-body{
     background: url("http://bgfons.com/uploads/cloth/cloth_texture1068.jpg");
 }
