--- a/src/Common/Components/Seat/Seat.css
+++ b/src/Common/Components/Seat/Seat.css
@@ -29,11 +29,11 @@
     border-radius: 5px;
     margin: 3px;
     cursor: pointer;
-    width: 20px;
+    width: 22px;
     height: auto;
     box-shadow: none;
-    font-size: 6px;
-    text-align: center
+    font-size: 8px;
+
   }
 }
 @media screen and (max-width:768px){
@@ -44,17 +44,28 @@
     height: auto;
     box-shadow: none;
     font-size: 10px;
-    text-align: center
+    padding: 5px
   }
 }
 @media screen and (max-width:500px){
   .ghe{
     /* margin: 0.1px; */
     cursor: pointer;
-    width: 15px;
+    width: 23px;
+    height: auto;
+    box-shadow: none;
+    font-size: 10px;
+    padding: 5px
+  }
+}
+@media screen and (max-width:360px){
+  .ghe{
+    /* margin: 0.1px; */
+    cursor: pointer;
+    width: 17px;
     height: auto;
     box-shadow: none;
     font-size: 5px;
-    text-align: center
+    padding: 5px
   }
 }
