--- a/src/Page/Home/BookingPage/BookingPage.css
+++ b/src/Page/Home/BookingPage/BookingPage.css
@@ -9,7 +9,6 @@
   font-size: 14px;
   padding-bottom: 6px;
   margin: 50px auto;
-  
   box-shadow: inset 0 0 5px black ,0 0 15px black 
 }
 
@@ -82,6 +81,15 @@
   .listBooking{
     height: 220px;
     margin-top: 80px;
+  }
+}
+@media screen and (max-width:360px){
+  #bookingPage{
+    margin: 50px 0 30px 0;
+  }
+  .screen{
+    margin: 40px auto;
+
   }
 }
 /* LISTBOOKING */
