--- a/src/Common/Components/Modal/Modal.css
+++ b/src/Common/Components/Modal/Modal.css
@@ -8,7 +8,8 @@
     background-color: #000; */
 }
 .modal-header, .modal-body{
-    background: url("http://bgfons.com/uploads/cloth/cloth_texture1068.jpg");
+    /* background: url("http://bgfons.com/uploads/cloth/cloth_texture1068.jpg"); */
+    background-color: #1E212A;
 }
 .modalBtn:focus,
 .modalBtn:hover,
